--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.22.0",
     "axios": "^1.11.0",
     "firebase": "^12.1.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.330.0",
+    "npm": "^11.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
